调整模板位置

--- a/public/pc/theme1/index/index/hello.html
+++ b/public/pc/theme1/index/index/hello.html
@@ -6,14 +6,11 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>第一天，我们创建了一个模板页面</title>
+        <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h3>第一天，我们创建了一个模板页面</h3>
-        <div>并且输出了我们想要到的东西。
-            <a href="{:url('index/hello', 'name=5')}"></a></div>
-        <h3>虽然还是同样的位置，但实现方法可以有点不一样呢！__STATICS__</h3>
+        <div>TODO write content</div>
     </body>
 </html>
