--- a/public/pc/theme1/index/index/index.html
+++ b/public/pc/theme1/index/index/index.html
@@ -9,6 +9,7 @@ and open the template in the editor.
         <title>第一天，我们创建了一个模板页面</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="{$theme}/css/style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <h3>第一天，我们创建了一个模板页面</h3>
