--- a/public/pc/theme1/index/index.html
+++ b/public/pc/theme1/index/index.html
@@ -10,13 +10,13 @@
 -->
 <html>
     <head>
-        <title>第四天，简单写入数据及皮肤目录结构的组织</title>
+        <title>第四天 简单写入数据及皮肤目录结构的组织</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="{$theme}/css/style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <h3>第四天，简单写入数据及皮肤目录结构的组织</h3>
+        <h3>第四天 简单写入数据及皮肤目录结构的组织</h3>
         <div>
             第二天，我们已经完成了站点皮肤的动态切换实验，今天，再补充一下皮肤目录组织的具体方案。
             皮肤目录组织基本上遵循以下原则：
