第四天 简单写入数据及皮肤目录结构的组织

--- a/public/pc/theme1/index/index.html
+++ b/public/pc/theme1/index/index.html
@@ -21,10 +21,10 @@
             第二天，我们已经完成了站点皮肤的动态切换实验，今天，再补充一下皮肤目录组织的具体方案。
             皮肤目录组织基本上遵循以下原则：
             <ol>
-                <li>1、不要将所有文件都存放在根目录下</li>
-                <li>2、目录层次不要太深，建议不要超过三层</li>
-                <li>3、不要使用过长的目录名和尽量不要使用中文目录名</li>
-                <li>4、应充分考虑后期维护调整的灵活性（如目录的移动、改名等）</li>
+                <li>不要将所有文件都存放在根目录下</li>
+                <li>目录层次不要太深，建议不要超过三层</li>
+                <li>不要使用过长的目录名和尽量不要使用中文目录名</li>
+                <li>应充分考虑后期维护调整的灵活性（如目录的移动、改名等）</li>
             </ol>
             在上一章中，我们通过动态调整 全局的视图根目录（view_base）动态切换皮肤时是存在缺陷的（不但目录层次更深，还会造成一些不必要的干扰），
             更好的做法是调整模板路径（view_path），不但目录层次减少，还增加了更多的灵活性。
