第四天 简单写入数据及皮肤目录结构的组织

--- a/public/pc/theme1/index/index.html
+++ b/public/pc/theme1/index/index.html
@@ -16,7 +16,7 @@
         <link href="{$theme}/css/style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <h3>第四天 简单写入数据及皮肤目录结构的组织</h3>
+        <h3>第四天 简单写入数据及皮肤目录结构的做优化</h3>
         <div>
             第二天，我们已经完成了站点皮肤的动态切换实验，今天，再补充一下皮肤目录组织的具体方案。
             皮肤目录组织基本上遵循以下原则：
