第六天 ThinkPHP5路由实验（二）路由分组实验

--- a/public/pc/theme1/route/index.html
+++ b/public/pc/theme1/route/index.html
@@ -20,7 +20,7 @@
             </p>
             <p>最重要的一条规则：注册多个路由规则后，系统会依次遍历注册过的满足请求类型的路由规则，一旦匹配到正确的路由规则后则开始执行最终的调度方法，后续规则就不再检测。
             </p>
-            
+            <h2>当前方法：{$action}  传入参数>name：{$name}、lng：{$lng}</h2>
             <h3>最基础的路由定义方法是:</h3>
             <pre><code class="language-php">Route::rule('路由表达式','路由地址','请求类型');//除了路由表达式和路由地址是必须的外，其它参数均为可选。</code></pre>
             
