--- a/public/pc/theme1/route/nav.html
+++ b/public/pc/theme1/route/nav.html
@@ -51,12 +51,22 @@
     </tbody>
     <tbody>   
         <tr>
-            <td><a href="{:url('group/gindex')}">{:url('group/index')}</a></td>
+            <td><a href="{:url('group_index')}">{:url('group_index')}</a></td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="{:url('group/gindex', ['id'=>12])}">{:url('group/index', ['id'=>12])}</a></td>
+            <td><a href="{:url('group/read', ['id'=>12])}">{:url('group/read', ['id'=>12])}</a></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td><a href="{:url('group/write', ['id'=>12])}">{:url('group/write', ['id'=>12])}</a></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td><a href="{:url('group/delete', ['id'=>12])}">{:url('group/delete', ['id'=>12])}</a></td>
             <td></td>
             <td></td>
         </tr>
